commit after fixing flake8 issues shown by pre-commit

--- a/examples/quadcopter-navigation-via-mode-constrained-mbrl.ipynb
+++ b/examples/quadcopter-navigation-via-mode-constrained-mbrl.ipynb
@@ -18,49 +18,38 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import simenvs\n",
-    "import numpy as np\n",
     "import gpflow as gpf\n",
-    "import hydra\n",
-    "import omegaconf\n",
-    "\n",
+    "import numpy as np\n",
+    "import simenvs\n",
     "import tensorflow as tf\n",
     "import tensorflow_probability as tfp\n",
-    "from gpflow import default_float\n",
-    "from moderl.dynamics import ModeRLDynamics\n",
-    "from moderl.controllers import ExplorativeController\n",
-    "from moderl.objectives import (\n",
-    "    bald_objective,\n",
-    "    conditional_gating_function_entropy,\n",
-    "    independent_gating_function_entropy,\n",
-    "    joint_gating_function_entropy,\n",
-    ")\n",
-    "from moderl.reward_functions import (\n",
-    "    ControlQuadraticRewardFunction,\n",
-    "    StateDiffRewardFunction,\n",
-    ")\n",
-    "\n",
-    "from gpflow.likelihoods import Gaussian, Bernoulli\n",
-    "from gpflow.kernels import Matern52, SeparateIndependent\n",
-    "from gpflow.inducing_variables import SharedIndependentInducingVariables, InducingPoints\n",
-    "from gpflow.functions import Constant\n",
-    "from moderl.rollouts import collect_data_from_env\n",
-    "\n",
-    "from mosvgpe.experts import SVGPExpert\n",
-    "from mosvgpe.gating_networks import SVGPGatingNetwork\n",
-    "from mosvgpe.mixture_of_experts import MixtureOfSVGPExperts\n",
-    "import wandb\n",
-    "from experiments.callbacks import DynamicsLoggingCallback\n",
     "from experiments.plot.controller import (\n",
     "    plot_trajectories_over_desired_gating_gp,\n",
     "    plot_trajectories_over_desired_mixing_prob,\n",
     ")\n",
     "from experiments.plot.utils import create_test_inputs\n",
-    "from experiments.utils import (\n",
-    "    sample_mosvgpe_inducing_inputs_from_data,\n",
-    "    sample_env_trajectories,\n",
+    "from experiments.utils import sample_env_trajectories\n",
+    "from gpflow import default_float\n",
+    "from gpflow.functions import Constant\n",
+    "from gpflow.inducing_variables import InducingPoints, SharedIndependentInducingVariables\n",
+    "from gpflow.kernels import Matern52, SeparateIndependent\n",
+    "from gpflow.likelihoods import Gaussian\n",
+    "from moderl.controllers import ExplorativeController\n",
+    "from moderl.dynamics import ModeRLDynamics\n",
+    "from moderl.objectives import joint_gating_function_entropy\n",
+    "\n",
+    "# bald_objective\n",
+    "# conditional_gating_function_entropy\n",
+    "# independent_gating_function_entropy\n",
+    "from moderl.reward_functions import (\n",
+    "    ControlQuadraticRewardFunction,\n",
+    "    StateDiffRewardFunction,\n",
     ")\n",
+    "from moderl.rollouts import collect_data_from_env\n",
+    "from mosvgpe.experts import SVGPExpert\n",
+    "from mosvgpe.gating_networks import SVGPGatingNetwork\n",
+    "from mosvgpe.mixture_of_experts import MixtureOfSVGPExperts\n",
+    "\n",
     "\n",
     "tfd = tfp.distributions"
    ]
@@ -176,12 +165,10 @@
     "        )\n",
     "        for _ in range(state_dim)\n",
     "    ]\n",
-    "    kernel = gpf.kernels.SeparateIndependent(kernels=kernels)\n",
+    "    kernel = SeparateIndependent(kernels=kernels)\n",
     "    idx = np.random.choice(range(X.shape[0]), size=num_inducing_experts, replace=False)\n",
     "    Z = X[idx, ...].reshape(-1, X.shape[1])\n",
-    "    inducing_variable = gpf.inducing_variables.SharedIndependentInducingVariables(\n",
-    "        gpf.inducing_variables.InducingPoints(Z)\n",
-    "    )\n",
+    "    inducing_variable = SharedIndependentInducingVariables(InducingPoints(Z))\n",
     "    return SVGPExpert(\n",
     "        kernel=kernel,\n",
     "        likelihood=likelihood,\n",
@@ -254,7 +241,9 @@
     "batch_size = 64\n",
     "epochs = 20000\n",
     "verbose = True\n",
-    "validation_split = 0.0  # when > 0 it can lead to train data not including observations from turbulent mode...\n",
+    "validation_split = (\n",
+    "    0.0  # > 0 can lead to no observations from turbulent mode in dataset...\n",
+    ")\n",
     "# Early stopping callback config\n",
     "patience = 50\n",
     "min_delta = 0"
@@ -1400,7 +1389,9 @@
    ],
    "source": [
     "def set_desired_mode(dynamics: ModeRLDynamics) -> int:\n",
-    "    \"\"\"Sets desired mode to one with lowest process noise (uses product of output dims)\"\"\"\n",
+    "    \"\"\"Sets desired mode to one with lowest process noise\n",
+    "    uses product of output dims\n",
+    "    \"\"\"\n",
     "    noise_var_prod = tf.reduce_prod(\n",
     "        dynamics.mosvgpe.experts_list[0].gp.likelihood.variance\n",
     "    )\n",
