added QR code and moved logo

--- a/poster/beamerthemeaalto.sty
+++ b/poster/beamerthemeaalto.sty
@@ -115,8 +115,9 @@
         % {\includegraphics[height=.02\paperwidth]{fig/cambridge-logo.png}}%
         % \hskip3ex
         % {\includegraphics[height=.04\paperwidth,trim=2.5cm 2.5cm 2.5cm 2cm]{fig/aalto}}%
-        \hskip3ex
-        {\includegraphics[height=.05\paperwidth,trim=2.5cm 2.5cm 2.5cm 2cm]{fig/aalto}}%
+        % \hskip8ex
+        % {\includegraphics[height=.05\paperwidth,trim=2.5cm 2.5cm 2.5cm 2cm]{fig/aalto}}%
+    % \tikz\node at (71.5,4) {\includegraphics[height=.05\paperwidth,trim=2.5cm 2.5cm 2.5cm 2cm]{fig/aalto}};
 
       \end{column}
     \end{columns}
